# droneclassroom

./: .dockerignore  .gitignore  CLAUDE.md  README.md  index.html  lessons-data.js  main.js  package-lock.json  package.json  pnpm-lock.yaml  screenshot-t103.js  screenshot-v14.js  server.js  teacher.html  tsconfig.base.json
.github/workflows/: deploy-api.yml
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  main.py  protocol.py  rest.py  roster.py  static.py  ws.py
apps/api/app/games/: __init__.py  arena.py  base.py  soccer.py
apps/api/static/: lessons-data.js
apps/api/tests/: conftest.py  test_arena.py  test_auth.py  test_games_anticheat.py  test_rest.py  test_soccer.py  test_stop_and_ball.py  test_suspect.py  test_ws.py
apps/simulator/: index.html  package.json  vite.config.ts
apps/teacher/: index.html  package.json  tsconfig.json  vite.config.ts
controllertestweb/: index.html
docs/: ATTRIBUTIONS.md  architecture.md  design-system.md  drone-soccer-design.md  plan.md  rewrite-plan.md  tech-stack.md  test-report-v1.4.md
docs/reports/: T-101-review-v2.md  T-101-review.json  T-101-review.md  T-101-v2-ac7.json  T-102-103-review.json  T-102-review.md  T-103-review.md  T-104-review.json  T-505-soccer-mvp.json
docs/tasks/: T-101-blockly-panel-toggle.md  T-102-blockly-action-blocks.md  T-103-blockly-advanced-blocks.md  T-104-levels-dual-mode.md  (+7 more)
legacy/: lesson.html  main.js  package-lock.json  screenshot-t104.js  teacher.html  validate-b101001.js
levels/: chapter1.json  chapter3.json
(+62 files in other folders)
