# @creafly/api — CREAFLY 教室無人機模擬器 FastAPI 後端
#
# 啟動：uv run creafly-api（或 PORT=3000 uv run uvicorn app.main:app --host 0.0.0.0 --port 3000）
# 測試：uv run pytest
# Lint：uv run ruff check .

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
creafly-api = "app.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
    "websockets>=16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# 預設 E/F 之上加：import 排序、bugbear、pyupgrade、簡化
select = ["E", "F", "I", "B", "UP", "SIM"]
